--- a/OpenGraph/Info.plist
+++ b/OpenGraph/Info.plist
@@ -20,6 +20,8 @@
 	<string>????</string>
 	<key>CFBundleVersion</key>
 	<string>$(CURRENT_PROJECT_VERSION)</string>
+	<key>NSHumanReadableCopyright</key>
+	<string>Copyright © 2016年 Satoshi Takano. All rights reserved.</string>
 	<key>NSPrincipalClass</key>
 	<string></string>
 </dict>
