--- a/.travis.yml
+++ b/.travis.yml
@@ -1,8 +1,11 @@
 language: objective-c
-osx_image: xcode7.3
+osx_image: xcode8
 
 xcode_project: OpenGraph.xcodeproj
 xcode_scheme: OpenGraph
 
 before_install:
   - carthage bootstrap
+
+script:
+  - xcodebuild build-for-testing test-without-building -project OpenGraph.xcodeproj -scheme OpenGraph -configuration Release ENABLE_TESTABILITY=YES
